roughed in proof for Hkappa being least squares optimal estimate

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1664,6 +1664,8 @@
 \newcommand{\Swyv}   {\Sw{yv}}
 \newcommand{\Swuy}   {\Sw{uy}}
 \newcommand{\Swxv}   {\Sw{xv}}
+\newcommand{\Swuv}   {\Sw{uv}}
+\newcommand{\Swvu}   {\Sw{vu}}
 \newcommand{\Swww}   {\Sw{ww}}
 \newcommand{\Swrr}   {\Sw{rr}}
 \newcommand{\Swwx}   {\Sw{wx}}
