--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1709,47 +1709,55 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
 \begin{enumerate}
   \item 
     \begin{align*}
-      %\Swvv 
-      %  &= \Swyy - \Swqq
-      %  && \text{by \prefp{cor:xvy}}
-      %\\&= \Swyy - \Swpq\estH
-      %  && \text{by \prefp{cor:Swxy}}
-      %\\&= \Swyy - \Swxq\estH
-      %  && \text{by \prefp{thm:opT_mnoise}}
-      %\\&= \Swyy - \Swxy\estH
-      %  && \text{by \prefp{thm:opT_mnoise}}
-      %\\
-      %\Swuu 
-      %  &= \Swxx - \Swpp
-      %  && \text{by \prefp{cor:xvy}}
-      %\\&= \Swxx - \Swqp\estH^\ast
-      %  && \text{by \prefp{cor:Swxy}}
-      %\\&= \Swxx - \Swyx\estH^\ast
-      %  && \text{by \prefp{thm:opT_mnoise}}
-      %\\
-      Y-V &= Q = P = H(X-U)
-      \\HU-V &= HX-Y
-      \\\pE\brp{\brs{HU-V}\brs{HU-V}^\ast} &= \pE\brp{\brs{HX-Y}\brs{HX-Y}^\ast}
+      \Swvv 
+        &= \Swyy - \Swqq
+        && \text{by \prefp{cor:xvy}}
+      \\&= \Swyy - \Swpq\estH
+        && \text{by \prefp{cor:Swxy}}
+      \\&= \Swyy - \Swxy\estH
+        && \text{by \prefp{thm:opT_mnoise}}
       \\
-      \\\implies \abs{\estH}^2\Swuu - \estH\cancelto{}{\Swuv} - \estH^\ast\cancelto{}{\Swvu} + \Swvv
-        &= \abs{\estH}^2\Swxx - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swyy
-      \\\implies&
+      \Swuu 
+        &= \Swxx - \Swpp
+        && \text{by \prefp{cor:xvy}}
+      \\&= \Swxx - \frac{\Swqp}{\estH}
+        && \text{by \prefp{cor:Swxy}}
+      \\&= \Swxx - \frac{\Swyx}{\estH}
+        && \text{by \prefp{thm:opT_mnoise}}
+      \\
+      \Swuu\brs{\abs{\estH}^2+\kappa}
+        &= \abs{\estH}^2\Swuu +\kappa\Swuu
+      \\&\eqd \Swuu\abs{\estH}^2 + \Swvv
+        && \text{by definition of $\kappa(\omega)$}
+      \\&= \abs{\estH}^2\brs{\Swxx - \frac{\Swyx}{\estH}}
+          +\brs{\Swyy - \Swxy\estH}
+      \\&= \abs{\estH}^2\Swxx - \estH^\ast\Swyx
+          -\Swxy\estH + \Swyy
+      %Y-V &= Q = P = H(X-U)
+      %\\HU-V &= HX-Y
+      %\\\pE\brp{\brs{HU-V}\brs{HU-V}^\ast} &= \pE\brp{\brs{HX-Y}\brs{HX-Y}^\ast}
+      %\\
+      %\\\implies \abs{\estH}^2\Swuu - \estH\cancelto{}{\Swuv} - \estH^\ast\cancelto{}{\Swvu} + \Swvv
+      %  &= \abs{\estH}^2\Swxx - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swyy
+      \\&\mathrlap{\implies
         \boxed{
           \Swuu(\omega) = \frac{\abs{\estH(\omega)}^2\Swxx(\omega) - \estH(\omega)\Swxy(\omega) - \estH^\ast(\omega)\Swxy^\ast(\omega) + \Swyy(\omega)}
                        {\kappa(\omega)+\abs{\estH(\omega)}^2}
-                \eqd\frac{F(\omega)}{G(\omega)}}
+                \eqd\frac{F(\omega)}{G(\omega)}}}
     \end{align*}
 
   \item 
     \begin{align*}
       0 &= \frac{1}{2}G^20 = \frac{1}{2}G^2\pderiv{}{\estH_R}\Swuu
       \\&= \frac{1}{2}G^2\frac{(F'G-G'F)}{G^2}
+        && \text{by \thme{Quotient Rule}}
       \\&= \frac{1}{2}(F'G-G'F)
       \\&= \frac{1}{2}\brs{2\estH_R\Swxx - \Swxy - \Swxy^\ast}G - \frac{1}{2}2\estH_RF
       \\&= \estH_R\Swxx G - G\Real\Swxy - \estH_RF
       \\
       0 &= \frac{1}{2}G^20 = \frac{1}{2}G^2\pderiv{}{\estH_I}\Swuu
       \\&= \frac{1}{2}G^2\frac{(F'G-G'F)}{G^2}
+        && \text{by \thme{Quotient Rule}}
       \\&= \frac{1}{2}(F'G-G'F)
       \\&= \frac{1}{2}\brs{2\estH_I\Swxx - i\Swxy + i\Swxy^\ast}G - \frac{1}{2}2\estH_IF
       \\&= \estH_I\Swxx G + G\Imag\Swxy - \estH_IF
@@ -1773,6 +1781,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
         \estH = \frac{\brp{\Swyy-\kappa\Swxx} \pm \sqrt{\brp{\Swyy-\kappa\Swxx}^2 + 4\kappa\abs{\Swxy}^2}}
                      {2\Swxy}
       }% Praise the Lord!!!     2019 March 17 Sunday
+      && \text{by \thme{Quadratic Equation}}
     \end{align*}
 \end{enumerate}
 \end{proof}
