estG and estH communication noise system work in progress

--- a/common/sty/language.sty
+++ b/common/sty/language.sty
@@ -3356,27 +3356,13 @@
 %---------------------------------------
 % Banners
 %---------------------------------------
-%\newcommand{\banner}[3][blue]{%
-%  {\raggedleft%
-%  \begin{tabular}{m{\tw-2mm}}%
-%    \cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \dashrulefill[-1.1mm]{1mm 1mm}{1em}\fntXits\textbf{\sun}%
-%    %\cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \ifthenelse{\isempty{#3}}{}{(\fntzhr #3)}\dashrulefill[-1.1mm]{1mm 1mm}{1em}\fntXits\textbf{\sun}%
-%   % \cellcolor[rgb]{#1}\color{white}\scshape\textbf{\mpcnt #2} ({\fntzhr #3})\dashrulefill[-1.1mm]{1mm 1mm}{1em}\fntXits\textbf{\sun}%
-%  \end{tabular}\newline%
-%%  \end{tabular}\newline\nopagebreak[4]%
-%  }}%
-
-\newcommand{\banner}[3][blue]{%
-  {\raggedleft%
-  \begin{tabular}{m{\tw-4.5mm}}%
-    %\cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \ifthenelse{\isempty{#3}}{}{(\fntzht\bfseries{#3})}\dashrulefill[-1.1mm]{1mm 1mm}{1em}%
-%    \cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \ifthenelse{\isempty{#3}}{}{\fntzht\bfseries{}}\dashrulefill[-1.1mm]{1mm 1mm}{1em}%
-    \cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \ifthenelse{\isempty{#3}}{}{\fntzht\bfseries{}}\dashrulefill[-1.1mm]{1mm 1mm}{1em}%
-    \colorbox{white}{\includegraphics[height=2mm]{../common/graphics/watercraft/ghind_djg_blue.eps}}%
-   % \cellcolor[rgb]{#1}\color{white}\scshape\textbf{\mpcnt #2} ({\fntzhr #3})\dashrulefill[-1.1mm]{1mm 1mm}{1em}\fntXits\textbf{\sun}%
-  \end{tabular}\newline%
-%  \end{tabular}\newline\nopagebreak[4]%
-  }}%
+%20190322_moved_to_dan.sty%\newcommand{\banner}[3][blue]{%
+%20190322_moved_to_dan.sty%  {\raggedleft%
+%20190322_moved_to_dan.sty%  \begin{tabular}{m{\tw-4.5mm}}%
+%20190322_moved_to_dan.sty%    \cellcolor{blue}\color{white}\scshape\textbf{\mpcnt #2} \ifthenelse{\isempty{#3}}{}{\fntzht\bfseries{}}\dashrulefill[-1.1mm]{1mm 1mm}{1em}%
+%20190322_moved_to_dan.sty%    \colorbox{white}{\includegraphics[height=2mm]{../common/graphics/watercraft/ghind_djg_blue.eps}}%
+%20190322_moved_to_dan.sty%  \end{tabular}\newline%
+%20190322_moved_to_dan.sty%  }}%
 
  \newcommand{\bannerABC}            [1][]{\banner[blue]{Alphabet}    {??}}%
  \newcommand{\bannerPenmanship}     [1][]{\banner[blue]{Penmanship}  {??}}%
